<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="#E0E0E0"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="info.truedo.agrokult.ProfileActivity">

            <ImageView
                android:id="@+id/profileimage"
                android:background="@drawable/border"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="75dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileimage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/organization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:text="@string/organization" />

            <Button
                android:id="@+id/postads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/colorPrimaryDark"
                android:layout_below="@+id/organization"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="26dp"
                android:text="@string/postads" />

            <Button
                android:id="@+id/networkbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_alignBottom="@+id/postads"
                android:layout_alignEnd="@+id/profileimage"
                android:layout_alignRight="@+id/profileimage"
                android:text="@string/networkbutton" />

            <Button
                android:id="@+id/messagebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messagebutton"
                android:background="@color/colorPrimaryDark"
                android:layout_alignBaseline="@+id/networkbutton"
                android:layout_alignBottom="@+id/networkbutton"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/postads"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/relativeLayout4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Occupations"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/relativeLayout4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="11dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/relativeLayout5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Interest"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/relativeLayout5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Posts"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>



        </RelativeLayout>
    </LinearLayout>
</ScrollView>