<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E0E0E0"
            tools:context="info.truedo.agrokult.MandiActivity">


            <SearchView
                android:id="@+id/searchView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:queryHint="Search"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

            <Button
                android:id="@+id/importbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/importbutton"
                android:layout_below="@+id/searchView2"
                android:layout_toLeftOf="@+id/export"
                android:layout_toStartOf="@+id/export"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp" />

            <Button
                android:id="@+id/export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_alignBottom="@+id/importbutton"
                android:layout_centerHorizontal="true"
                android:text="@string/export" />

            <Button
                android:id="@+id/latestbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest"
                android:background="@color/colorPrimaryDark"
                android:layout_alignBaseline="@+id/export"
                android:layout_alignBottom="@+id/export"
                android:layout_toRightOf="@+id/export"
                android:layout_toEndOf="@+id/export"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp" />

            <RelativeLayout
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_below="@+id/importbutton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="22dp"
                android:id="@+id/relativeLayout6">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Posts"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_alignTop="@+id/relativeLayout6"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Ads"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="380dp"
                android:layout_height="80dp"
                android:layout_below="@+id/relativeLayout6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="14dp"
                android:id="@+id/relativeLayout7">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Blog Article"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_below="@+id/relativeLayout7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:id="@+id/relativeLayout8">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Ads"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_alignTop="@+id/relativeLayout8"
                android:layout_alignRight="@+id/relativeLayout7"
                android:layout_alignEnd="@+id/relativeLayout7">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Ads"/>
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>